@@ -1,3 +1,14 @@
+2009-06-22  Andreas Kupries  <andreask@activestate.com>
+
+	* main1.tcl: Fix handling of hierarchical typemethods for missing
+	* main1_83.tcl: subcommands. If a toplevel hmethod is not found
+	* main2.tcl: we can assume it to be an instance name and do an
+	* pkgIndex.tcl: implicit 'create' of it. If the toplevel hmethod
+	* snit.tcl: hass already been accepted however a missing submethod
+	* snit2.tcl: has to error out, an implicit create is not possible
+	* snit.test: any longer. Extended the testsuite to cover this
+	  case. Bumped the package versions to 2.2.3, and 1.3.3.
+
 2009-04-21  Andreas Kupries  <andreask@activestate.com>
 
 	* main1.tcl (::snit::Comp.Init): Close unused standard channels
